<resources>
    <string name="app_name">May Contain</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>


    <string name="nutAllergySelected">Nut Allergy Selected</string>

    <string name="nutAllergyDeselected">Nut Allergy Deselected</string>

    <string name="SelectedAllergens">Selected Allergens</string>

    <string name="nutAllergy">Nut Allergy</string>

    <string name="dairyAllergy">Dairy Allergy</string>

    <string name="shellfishAllergy">Shellfish Allergy</string>

    <string name="dairySelect">Dairy Allergy Selected</string>

    <string name="dairyDeselect">Dairy Allergy Deselected</string>

    <string name="shellfishSel">Shellfish Allergy Selected</string>

    <string name="shellfishDesel">Shellfish Allergy Deselected</string>

    <string name="nut_allergy">Nut Allergy</string>

    <string name="dairy_allergy">Dairy Allergy</string>

    <string name="shellfish_allergy">Shellfish Allergy</string>

    <string name="update">Update</string>

    <string name="please_click_your_allergens">Please Click your allergens</string>

    <string name="login">Login</string>

    <string name="maycontain">MayContain</string>

    <string name="this_product_is_safe_to_use">This product is safe to use</string>

    <string name="return_to_search">Return to Search</string>

    <string name="scan_products">Scan Products</string>

</resources>